--- a/FolderCacher/FolderCacher.vcxproj
+++ b/FolderCacher/FolderCacher.vcxproj
@@ -150,8 +150,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BaseWindow.cpp" />
-    <ClCompile Include="FolderCacher.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
